Удалены лишние файлы

--- a/index.html
+++ b/index.html
@@ -7,19 +7,6 @@
 	<title>Илья Задорнов</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<!-- Facebook and Twitter integration -->
-	<meta property="og:title" content="" />
-	<meta property="og:image" content="" />
-	<meta property="og:url" content="" />
-	<meta property="og:site_name" content="" />
-	<meta property="og:description" content="" />
-	<meta name="twitter:title" content="" />
-	<meta name="twitter:image" content="" />
-	<meta name="twitter:url" content="" />
-	<meta name="twitter:card" content="" />
-
-	<!-- <link href="https://fonts.googleapis.com/css?family=Droid+Sans" rel="stylesheet"> -->
-
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
 	<!-- Icomoon Icon Fonts-->
@@ -28,13 +15,6 @@
 	<link rel="stylesheet" href="css/themify-icons.css">
 	<!-- Bootstrap  -->
 	<link rel="stylesheet" href="css/bootstrap.css">
-	<!-- Magnific Popup -->
-	<link rel="stylesheet" href="css/magnific-popup.css">
-	<!-- Owl Carousel  -->
-	<link rel="stylesheet" href="css/owl.carousel.min.css">
-	<link rel="stylesheet" href="css/owl.theme.default.min.css">
-	<!-- Flexslider -->
-	<link rel="stylesheet" href="css/flexslider.css">
 	<!-- Theme style  -->
 	<link rel="stylesheet" href="css/style.css">
 
@@ -51,7 +31,7 @@
 		<nav class="gtco-nav" role="navigation">
 			<div class="gtco-container">
 				<div class="row">
-					<div class="col-sm-3">
+					<div class="col-sm-5">
 						<div id="gtco-logo"><a href="index.html">Илья Задорнов</a></div>
 					</div>
 					<div class="col-xs-7 text-right menu-1 main-nav">
@@ -59,9 +39,9 @@
 							<li><a href="#" data-nav-section="blog">Проекты</a></li>
 							<li><a href="#" data-nav-section="contact">Контакты</a></li>
 						</ul>
-						
+
 					</div>
-					
+
 				</div>
 
 			</div>
@@ -78,21 +58,23 @@
 				</div>
 				<div class="row">
 					<div class="col-md-4">
-						<a href="https://github.com/Mozma/Bookshelf" class="gtco-card-item has-text">
+						<a href="https://github.com/Mozma/Bookshelf" target="_blank" rel="noopener noreferrer"
+							class="gtco-card-item has-text">
 							<figure>
 								<div class="overlay"><i class="ti-arrow-right"></i></div>
 								<img src="images/Shelf.png" alt="Image" class="img-responsive">
 							</figure>
 							<div class="gtco-text text-left">
 								<h2>Bookshelf</h2>
-								<p>Far far away, behind the word mountains, far from the countries Vokalia..</p>
+								<p>Небольшое приложение для организации книжной коллекции</p>
 
 							</div>
 						</a>
 					</div>
 
 					<div class="col-md-4">
-						<a href="https://github.com/Mozma/SomeBinaryStuff" class="gtco-card-item has-text">
+						<a href="https://github.com/Mozma/SomeBinaryStuff" target="_blank" rel="noopener noreferrer"
+							class="gtco-card-item has-text">
 							<figure>
 								<div class="overlay"><i class="ti-arrow-right"></i></div>
 								<img src="images/Binary.png" alt="Image" class="img-responsive">
@@ -100,13 +82,14 @@
 							<div class="gtco-text text-left">
 								<h2>Some Binary Stuff
 								</h2>
-								<p>Far far away, behind the word mountains, far from the countries Vokalia..</p>
+								<p>Простой тренажёр перевода чисел в разные системы счисления</p>
 							</div>
 						</a>
 					</div>
 
 					<div class="col-md-4">
-						<a href="https://github.com/Mozma/FractalPics" class="gtco-card-item has-text">
+						<a href="https://github.com/Mozma/FractalPics" target="_blank" rel="noopener noreferrer"
+							class="gtco-card-item has-text">
 							<figure>
 								<div class="overlay"><i class="ti-arrow-right"></i></div>
 								<img src="images/Fractal.png" alt="Image" class="img-responsive">
@@ -114,7 +97,7 @@
 							<div class="gtco-text text-left">
 								<h2>Fractal Pics
 								</h2>
-								<p>Far far away, behind the word mountains, far from the countries Vokalia..</p>
+								<p>Приложение, которое визуализирует некоторые фракталов</p>
 							</div>
 						</a>
 					</div>
@@ -125,39 +108,7 @@
 				</div>
 			</div>
 		</div>
-<!--
-		<div id="gtco-subscribe">
-			<div class="gtco-container">
-				<div class="row">
-					<div class="col-md-8 col-md-offset-2 text-center gtco-heading">
-						<h2>Subscribe</h2>
-						<p>Be the first to know about the new templates.</p>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-md-12">
-						<form class="form-inline">
-							<div class="col-md-4 col-sm-4">
-								<div class="form-group">
-									<label for="email" class="sr-only">Email</label>
-									<input type="email" class="form-control" id="email" placeholder="Your Email">
-								</div>
-							</div>
-							<div class="col-md-4 col-sm-4">
-								<div class="form-group">
-									<label for="name" class="sr-only">Name</label>
-									<input type="text" class="form-control" id="name" placeholder="Your Name">
-								</div>
-							</div>
-							<div class="col-md-4 col-sm-4">
-								<button type="submit" class="btn btn-danger btn-block">Subscribe</button>
-							</div>
-						</form>
-					</div>
-				</div>
-			</div>
-		</div>
--->
+
 		<div id="gtco-contact" data-section="contact" class="gtco-cover gtco-cover-xs"
 			style="background-image:url(images/Shark.jpg);">
 			<div class="overlay"></div>
@@ -177,16 +128,17 @@
 
 		<footer id="gtco-footer" role="contentinfo">
 			<div class="gtco-container">
-
 				<div class="row copyright">
 					<div class="col-md-12">
 						<p class="pull-left">
 							<small class="block">&copy; 2021 Ilia Zadornov. All Rights Reserved.</small>
 						</p>
 						<p class="pull-right">
-						<ul class="gtco-social-icons pull-right">
-							<li><a href="#"><i class="icon-github"></i></a></li>
-							<li><a href="#"><i class="icon-vk"></i></a></li>
+						<ul class="gtco-social-icons pull-right ">
+							<li><a href="https://github.com/Mozma" target="_blank" rel="noopener noreferrer"><i
+										class="icon-github"></i></a></li>
+							<li><a href="https://vk.com/mozmaa" target="_blank" rel="noopener noreferrer"><i
+										class="icon-vk"></i></a></li>
 							<li><a href="#"><i class="icon-instagram"></i></a></li>
 						</ul>
 						</p>
