Добавлены проекты и раздел с навыками

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 	<!-- Theme style  -->
 	<link rel="stylesheet" href="css/style.css">
 
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css">
+
 	<!-- Modernizr JS -->
 	<script src="js/modernizr-2.6.2.min.js"></script>
 
@@ -36,7 +38,8 @@
 					</div>
 					<div class="col-xs-7 text-right menu-1 main-nav">
 						<ul>
-							<li><a href="#" data-nav-section="blog">Проекты</a></li>
+							<li><a href="#" data-nav-section="projects">Проекты</a></li>
+							<li><a href="#" data-nav-section="skills">Навыки</a></li>
 							<li><a href="#" data-nav-section="contact">Контакты</a></li>
 						</ul>
 
@@ -48,7 +51,7 @@
 		</nav>
 
 
-		<div id="gtco-blog" data-section="blog">
+		<div id="gtco-blog" data-section="projects">
 			<div class="gtco-container">
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 text-center gtco-heading">
@@ -67,22 +70,25 @@
 							<div class="gtco-text text-left">
 								<h2>Bookshelf</h2>
 								<p>Небольшое приложение для организации книжной коллекции</p>
+								<p class="gtco-stack">WPF, SQLite, Entity Framework</p>
 
 							</div>
 						</a>
 					</div>
 
+
+
 					<div class="col-md-4">
-						<a href="https://github.com/Mozma/SomeBinaryStuff" target="_blank" rel="noopener noreferrer"
+						<a href="https://github.com/Mozma/OnlineStore" target="_blank" rel="noopener noreferrer"
 							class="gtco-card-item has-text">
 							<figure>
 								<div class="overlay"><i class="ti-arrow-right"></i></div>
-								<img src="images/Binary.png" alt="Image" class="img-responsive">
+								<img src="images/Store.png" alt="Image" class="img-responsive">
 							</figure>
 							<div class="gtco-text text-left">
-								<h2>Some Binary Stuff
-								</h2>
-								<p>Простой тренажёр перевода чисел в разные системы счисления</p>
+								<h2>Online Store</h2>
+								<p>Небольшое приложение для организации книжной коллекции</p>
+								<p class="gtco-stack">WinForms, MS SQL Server, Entity Framework</p>
 							</div>
 						</a>
 					</div>
@@ -95,16 +101,114 @@
 								<img src="images/Fractal.png" alt="Image" class="img-responsive">
 							</figure>
 							<div class="gtco-text text-left">
-								<h2>Fractal Pics
-								</h2>
+								<h2>Fractal Pics</h2>
 								<p>Приложение, которое визуализирует некоторые фракталов</p>
 							</div>
 						</a>
 					</div>
 
 					<div class="clearfix visible-lg-block visible-md-block"></div>
+
+					<div class="col-md-4">
+						<a href="https://github.com/Mozma/SomeBinaryStuff" target="_blank" rel="noopener noreferrer"
+							class="gtco-card-item has-text">
+							<figure>
+								<div class="overlay"><i class="ti-arrow-right"></i></div>
+								<img src="images/Binary.png" alt="Image" class="img-responsive">
+							</figure>
+							<div class="gtco-text text-left">
+								<h2>Some Binary Stuff</h2>
+								<p>Простой тренажёр перевода чисел в разные системы счисления</p>
+							</div>
+						</a>
+					</div>
+
+
+					<div class="col-md-4">
+						<a href="https://github.com/Mozma/c-sharp-Tetris" target="_blank" rel="noopener noreferrer"
+							class="gtco-card-item has-text">
+							<figure>
+								<div class="overlay"><i class="ti-arrow-right"></i></div>
+								<img src="images/Tetris.png" alt="Image" class="img-responsive">
+							</figure>
+							<div class="gtco-text text-left">
+								<h2>Tetris v1.0</h2>
+								<p>Куда же без тетриса</p>
+							</div>
+						</a>
+					</div>
+
+
+					<div class="clearfix visible-lg-block visible-md-block"></div>
 					<div class="clearfix visible-sm-block"></div>
 
+				</div>
+			</div>
+		</div>
+		<div class="gtco-section" id="gtco-services" data-section="skills">
+			<div class="gtco-container">
+				<div class="row">
+					<div class="col-md-6">
+						<div class="gtco-heading">
+							<h2 class="gtco-left">Навыки</h2>
+							<p>Невероятное описание моих навыков</p>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-md-6">
+						<div class="row">
+
+							<div class="col-md-12">
+								<div class="feature-left">
+									<span class="icon">
+										<i class="ti-bookmark"></i>
+									</span>
+									<div class="feature-copy">
+										<h3>Ключевые навыки</h3>
+										<p>C#, WinForms, WPF</p>
+									</div>
+								</div>
+							</div>
+							<div class="col-md-12">
+								<div class="feature-left">
+									<span class="icon">
+										<i class="ti-server"></i>
+									</span>
+									<div class="feature-copy">
+										<h3>Базы данных</h3>
+										<p>MSSQL, T-SQL, SQLite</p>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-6 animate-box" data-animate-effect="fadeIn">
+						<div class="row">
+							<div class="col-md-12">
+								<div class="feature-left">
+									<span class="icon">
+										<i class="ti-harddrive"></i>
+									</span>
+									<div class="feature-copy">
+										<h3>Фреймворки</h3>
+										<p>Entity Framework</p>
+									</div>
+								</div>
+								<div class="col-md-12">
+									<div class="feature-left">
+										<span class="icon">
+											<i class="ti-ruler-alt"></i>
+										</span>
+										<div class="feature-copy">
+											<h3>Инструменты</h3>
+											<p>VS Studio, Git, GitHub, TFVC</p>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -117,7 +221,7 @@
 					<div class="display-t">
 						<div class="display-tc">
 							<div class="col-md-12">
-								<h3>Связаться со мной можно по почте <a href="#">il.mozma@gmail.com</a></h3>
+								<h3>Связаться со мной можно по почте <a href="mailto:il.mozma@gmail.com">il.mozma@gmail.com</a></h3>
 							</div>
 						</div>
 					</div>
@@ -127,19 +231,20 @@
 
 
 		<footer id="gtco-footer" role="contentinfo">
-			<div class="gtco-container">
+			<div class="gtco-container ">
 				<div class="row copyright">
 					<div class="col-md-12">
 						<p class="pull-left">
-							<small class="block">&copy; 2021 Ilia Zadornov. All Rights Reserved.</small>
+							<small class="block">&copy; 2021 Ilia Zadornov</small>
 						</p>
-						<p class="pull-right">
+						<p class="pull-right align-middle">
 						<ul class="gtco-social-icons pull-right ">
 							<li><a href="https://github.com/Mozma" target="_blank" rel="noopener noreferrer"><i
-										class="icon-github"></i></a></li>
+										class="devicon-github-original"></i>
+								</a></li>
 							<li><a href="https://vk.com/mozmaa" target="_blank" rel="noopener noreferrer"><i
 										class="icon-vk"></i></a></li>
-							<li><a href="#"><i class="icon-instagram"></i></a></li>
+							<li><a href="https://www.instagram.com/kopik/"><i class="ti-instagram"></i></a></li>
 						</ul>
 						</p>
 					</div>
@@ -161,9 +266,6 @@
 	<script src="js/bootstrap.min.js"></script>
 	<!-- Waypoints -->
 	<script src="js/jquery.waypoints.min.js"></script>
-	<!-- Carousel -->
-	<script src="js/owl.carousel.min.js"></script>
-
 
 	<!-- Main -->
 	<script src="js/main.js"></script>
