--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                                     </span>
                                     <div class="feature-copy">
                                         <h3>Инструменты</h3>
-                                        <p>VS Studio, Git, GitHub, TFVC</p>
+                                        <p>VS, Git, GitHub, TFVC</p>
                                     </div>
                                 </div>
                             </div>
