Changed design and fixed text

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <div class="row">
                     <div class="text-center projects-heading">
                         <h2>Проекты</h2>
-                        <p>Очень классное описание</p>
+                        <p>Подборка моих проектов</p>
                     </div>
                 </div>
                 <div class="row ">
@@ -64,7 +64,7 @@
                             </figure>
                             <div class="card-item-text text-left">
                                 <h2>Bookshelf</h2>
-                                <p>Небольшое приложение для организации книжной коллекции</p>
+                                <p>Приложение для организации книжной коллекции</p>
                                 <p class="gtco-stack">WPF, SQLite, Entity Framework</p>
                             </div>
                         </a>
@@ -79,7 +79,7 @@
                             </figure>
                             <div class="card-item-text text-left">
                                 <h2>Online Store</h2>
-                                <p>Небольшое приложение для организации книжной коллекции</p>
+                                <p>Приложение для учёта товаров в интернет-магазине</p>
                                 <p class="gtco-stack">WinForms, MS SQL Server, Entity Framework</p>
                             </div>
                         </a>
@@ -96,7 +96,7 @@
                             </figure>
                             <div class="card-item-text text-left">
                                 <h2>Fractal Pics</h2>
-                                <p>Приложение, которое визуализирует некоторые фракталов</p>
+                                <p>Приложение для визуализации фракталов</p>
                             </div>
                         </a>
                     </div>
@@ -144,7 +144,7 @@
                     <div class="col-md-6">
                         <div class="gtco-heading">
                             <h2 class="gtco-left">Навыки</h2>
-                            <p>Невероятное описание моих навыков</p>
+                            <p></p>
                         </div>
                     </div>
                 </div>
@@ -232,7 +232,7 @@
             <div class="row ">
                 <div class="col-md-12">
                     <p class="pull-left">
-                        <small class="block">&copy; 2021 Ilia Zadornov</small>
+                        <small class="block">&copy; 2022 Ilya Zadornov</small>
                     </p>
                     <p class="pull-right align-middle">
                     <ul class="social-icons pull-right ">
@@ -241,10 +241,9 @@
                                 <i class="devicon-github-original"></i>
                             </a>
                         <li>
-                            <a href="https://vk.com/mozmaa" target="_blank" rel="noopener noreferrer">
+                            <a href="https://vk.com/ilya_zadornov" target="_blank" rel="noopener noreferrer">
                                 <i class="fab fa-vk"></i>
                             </a>
-                        <li><a href="https://www.instagram.com/kopik/"><i class="fab fa-instagram"></i></a>
                     </ul>
                 </div>
             </div>
