--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 
 <head>
+    <link rel="icon" href="images/icon.svg" type="image/svg+xml">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Илья Задорнов</title>
